--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,8 @@ SLACK_BOT_TOKEN=
 SLACK_SIGNING_SECRET=
 ALLOWED_CHANNEL= 
 PUBLIC_BASE_URL=  (leave empty for now)
-CLAY_WEBHOOK_URL= https://api.clay.com/v3/sources/webhook/pull-in-data-from-a-webhook-5caa6984-5f3c-4541-ad33-57aee4d5a806
-CLAY_API_KEY= 599229087df58400a118
+CLAY_WEBHOOK_URL= 
+CLAY_API_KEY= 
 BOT_CALLBACK_SECRET= weirdlongrandomstring
 PORT=3000
  
